--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
 <html>
 
 <head>
-    <title>Форма ввода имени</title>
+    <title>Красивый участок 19 соток</title>
     <meta charset="utf8">
-
-    <style>
-        .inputStyle {
-            width: 220px;
-        }
-    </style>
 
 </head>
 
@@ -16,22 +10,38 @@
 
 <body>
 
-<form name="form1" action="test_read_name.php" method="GET">
-    <input class="inputStyle" type="text" name="Firstname" placeholder="Введите ваше имя">
-    </br>
-    <input class="inputStyle" type="text" name="Lastname" placeholder="Введите вашу фамилию">
-    </br>
-    <input type="submit">
-</form>
+Прекрасный участок для вашего отдыха. (участок начинается от столбика с лентой, и заканчивается за домом примерно через 30 метров, на второй фотографии "с забором" - показана задняя часть участка, т.е. позади находятся строения, а с переди вид на просторное поле. Причем со стороны вида на природу находится проток реки что является защитой от того, что перед вашим домом не возведудт других строений портящих вид), т.к. это считается водоохранной зоной. В вашем распоряжении 19,8 соток земли. Рядом столб с питающей линией электроэнергии, для подключения которой по ТУ не требуется возведения дополнительных опор. С лицевой стороны находится проток реки, что позволяет доступ к воде. Произведено межевание и вынос границ участка на местности, есть акт подтверждающий произведение работ и выставленные на участке границы.
+Возведено временное строение под инвентарь, по вашей просьбе может быть разобрано и убрано в короткие сроки. Конализация, газопровод не подведены. Городом предварительно к 2016 году планируется прокладка транзитом газопровода через данную деревню.
+Поверхность участка имеет небольшой уклон, что является преимуществом для отвода лишних вод с участка после обильных дождей, так же преимущество в формировании стоков водопровода.
+В ПРЕДЕЛАХ НЕСКОЛЬКИХ КИЛЛОМЕТРОВ НАХОДЯТСЯ:
+* Колодец с ключевой водой (питьевой)
+* 3 продуктовых и 1 с хозтоварами магазины, конструируемый комплекс
+* Садик, школа, лечебный пункт.
+* Речка, пляж.
+* Лесополоса (брусника, клюква, грибы)
+* Усадьба Строгоновых-Галицыных (напоминает убранство петергофа)
+Есть возможность докупки 5 дополнительных соток прилегающих к участку земель в случае надобности расширения границ. Участок полностью в вашем распоряжении (возведение строений, изменение почвы и т.п.) На все интересующие вопросы отвечу по телефону.
+
+Теперь затронем важную тему: "тип участка». Как правило под строительство дома выбирают один из двух вариаций ЛПХ и ИЖС.
+Отличие ЛПХ от ИЖС         
+ Свидетельство на право собственности на земельные участки  содержит очень важную информацию: в нём указан вид разрешенного использования и категория земли. Вы можете заняться строительством собственного дома, если категория земли в документах указана как земли населенных пунктов, а вид использования ИЖС либо ЛПХ. 
+Поговорим немного о видах использования: ИЖС и ЛПХ.    
+ИЖС - индивидуальное жилищное строительство, что вполне конкретно говорит о том, что этот земельный участок разрешается использовать для строительства дома.
+ЛПХ - личное подсобное хозяйство, помимо разрешения на строительство дома, дает намного больше возможностей для вашей деятельности на участке, чем ИЖС.
+Земельный участок ИЖС дает очень ограниченные возможности, ведь стоит всегда продумывать наперед вашу прибыль и сферу возможностей. Использовать земли ЛПХ всегда намного выгоднее. К явным преимуществам можно отнести: сельхозтоваропроизводство.  На участке ЛПХ вы сможете: посадить сад, огород, построить теплицы, фермы, выращивать фрукты, овощи, ягоды, животных и птицу, для собственных нужд и продажи, а так же организовать на своём участке переработку любой сельхоз продукции. В современном мире самостоятельное обеспечение себя и своих родных, экологически чистыми  продуктами собственного производства – залог отличного здоровья и самочувствия. Вы сможете позаботиться о своём здоровье и здоровье своих близких, а если пока вам это не нужно, то сможете воплотить подобные планы,  при необходимости, на этот случай,  у вас уже будет, собственный участок, с видом разрешенного использования ЛПХ, а при желании и с личным капитальным домом на нём.  Если у вас не будет документа, подтверждающего вид использования земельного участка ЛПХ, Вы не сможете получить регистрацию в ветеринарной инспекции, а также получить сертификат на собственную продукцию, чтобы продать ее потом. И ещё один огромный плюс: собственник земель ЛПХ, который выращивает на них и продает свою продукцию, не является частным предпринимателем, а следовательно, не должен платить налоги и сборы, и не проверяется различными государственными структурами. Естественно, необходимо сохранять и соблюдать определенные правила и нормы. Но, в общем, это самый простой способ наладить собственный бизнес без волокиты. Еще одним стимулом для выбора именно ЛПХ является возможность без особых проблем получить кредит в любом банковском учреждении для дальнейшего развития под залог вашего участка. 
+Согласно "Градостроительному кодексу РФ" №190-ФЗ, статья 48, часть 3, вам не требуется проект на индивидуальное жилое строение. Следует всего лишь добавить к документам собственный план желаемой постройки, и вы сможете получить разрешение на строительство. После вы получите адрес и зарегистрируетесь после окончания строительства. Вам необходимо пройти процедуру сдачи объекта в эксплуатацию.
+А вот насчет земель ЛПХ можно сказать, что они лишены всякой бумажной волокиты и намного лучше и быстрее проходят любые процедуры с регистрацией.
+Земельный участок ЛПХ можно точно также использовать для строительства собственного дома. Вам не обязательно выращивать курей, свиней или расставлять ульи, но иметь еще и такую возможность на всякий случай очень выгодно. На участке можно построить индивидуальный дом, который вы сможете в любое время зарегистрировать и при желании продать без проблем.
+Естественно, что проводить строительство на участке необходимо с соблюдением норм, которые прописаны в законодательных актах, а вот зарегистрировать полученный результат вы сможете на законных основаниях, даже если у вас не было согласования и предварительных разрешений на строительство. Это отличная возможность построить дом своей мечты.
+До 2015 вы сможете очень просто зарегистрировать ваше жилище, ведь для оформления постройки в собственность вам не придется получать разрешение на строительство и согласование в государственных органах о введении объекта в эксплуатацию – необходимо всего лишь получить технический паспорт.
+Все слышали о том, что за земли необходимо платить налог. Так вот налог на земли ЛПХ в несколько раз меньше, чем на ИЖС. Это делает земельные участки для ЛПХ намного привлекательнее.
+Земельный участок для ИЖС - это земля, которую вы сможете использовать только для строительства индивидуального дома, который не будет превышать 3х этажей. Мало того, что вас ограничивают в этажах, так еще и четко прописывают законодательно то, что на данном участке могут построить только один дом. Кстати, при покупке земель для ИЖС вы должны четко понимать, что вам необходимо построить на них дом в течение 3х лет, участки под ЛПХ сроками на строительство вообще никак не ограничены.  Для строительства здания на участке под ИЖС вам необходимо заказать проект у специальной государственной строительной компании, которая имеет лицензию на проведение подобных работ, затем согласовать и собирать подписи во многих государственных учреждениях. После чего по окончанию строительства вы сможете получить прописку после регистрации.
+Для земель под ИЖС существуют ограничения по размерам участка. Норма разная для каждого населенного пункта.
+Если норма будет меньше, чем ваш участок, то вам все равно не разрешат его разделить и построить два дома, ведь второй будет считаться нежилой пристройкой, а то, что там кто-то живет на самом деле, никого интересовать не будет.
+Данный участок является участком ЛПХ, и находится в районе землей поселения, что позволяет возводить на нем свой дом, так и вести личное подсобное хозяйство.
 
 
-<form name="form2" action="test_read_name.php" method="POST">
-    <input class="inputStyle" type="text" name="login" placeholder="Введите ваш логин">
-    </br>
-    <input class="inputStyle" type="password" name="Password" placeholder="Введите ваш пароль">
-    </br>
-    <input type="submit">
-</form>
+
 
 </body>
 
