--- a/index.html
+++ b/index.html
@@ -601,7 +601,8 @@ $.ajax({
 			<div class="hide_line  section section149 mode_2  " style="background-color:#ffffff;  background-image:url(img/null.png);" data-id="456889" id="b_456889"><a name="a_456889"></a>
 			
 			</div>
-	
+	<div class="hide_line  section section149 mode_2  " style="background-color:#ffffff;  background-image:url(img/null.png);" data-id="456889" id="b_456889"><a name="a_456889"></a>
+		
 				<div class="section_inner">
 					<div class="title  ">Оставьте отзыв по телефону или эл.почте</div>
 					<div class="sub_title  ">Нам важно ваше мнение <br>(опубликованы последние 3 мнения)</div>
