--- a/index.html
+++ b/index.html
@@ -245,53 +245,49 @@ $.ajax({
 		</div>
 		<div class="hide_line wide  section section132 " style="background-color:#ffffff;  background-image:url(img/null.png);" data-id="456877" id="b_456877"><a name="a_456877"></a>
 			<div class="section_inner">
-				<div class="title  ">Что вы должны знать об этом месте</div>
+				<div class="title  ">Что необходимо знать об этом месте</div>
 				<div class="sub_title  hidden   ">____</div>
 				<div class="text">Деревня Тарасово, ул. 12-ая линия, д. 114. Кадастровый номер: 47:26:0720002:132. <br><br>
 					<img class="rightimg" height="600px" src="img/213.png" alt=""> Участок располагается от столбика с
 					лентой и заканчивается примерно
-					примерно через 30 метров за домом, позади
-					находятся строения (дома), спереди - вид на
+					примерно через 30 метров за домом на фотографии. Позади
+					участка располагаются другие строения (соседи), спереди - вид на
 					просторное поле. Размер участка:
 					19,8 соток земли. Со стороны
 					поля проходит проток реки, что
 					позволяет получить доступ к воде.
 					Произведено межевание и вынос
 					границ участка на местности (акт
-					подтверждающий произведение
-					работ и выставленные на участке
-					границы).
+					подтверждающий работы).
 					<br><br>
 					Строение под
 					инвентарь (то что на первом фото) уже убрано.
 					<br><br>
 					Поверхность участка имеет небольшой
 					уклон, что является преимуществом
-					для отвода избыточных вод с участка, после
+					для отвода сточных вод, после
 					обильных дождей.
 					<br><br>
-					Поднимем здесь важную тему это тип участка. Всем известно, что чаще всего под
-					строительство дома выбирают один из двух вариантов участвок: ЛПХ и ИЖС (личное подсобное хозяйство и индивидуальное жилищное строительство).
+					За одно поднимем важную тему - тип участка. Всем известно, что чаще всего под
+					строительство дома выбирают один из двух вариантов участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство).
 					<br><br>
 					Основные отличия ЛПХ от ИЖС:
 					<br>
 					Свидетельство на право собственности, содержит два крайне
 					важных момента: в нём отражен вид разрешенного использования
-					и категория земли. В случае наличия двух вышеупомянутых, Вы можете безпроблем заняться строительством собственного дома.
-					В случае разумеется если категория земель в документом документе обозначена как "земли населенных пунктов",  и соответсвенно
-					вид использования: ИЖС либо ЛПХ. Это крайне важный момент! Который Вы должны знать, даже если ваш выбор падет
-					на другую недвижимость, что бы как говориться не остаться с носом :) Вот вам и бесплатный совет. Проверяйте всегда эти два 
-					важнейших пунка, которые в обзятельном порядке должны быть отражены в документах! Если они иные - тоо будите выращивать
-					на нем только картошку, и в случае строительства лишь получать предписания о демонтаже дома (оно вам надо). 
-					Если говорить подробнее о видах использования: ИЖС и ЛПХ.
+					и категория земли. Если указанно необходимое сочетание, то Вы сможете безпроблем сразу заняться строительством собственного дома.
+					(В случае если категория земель в документах обозначена как "земли населенных пунктов", как у данного участка),  и соответсвенно
+					вид использования: ИЖС/ЛПХ. Это крайне важный момент! Который Вы должны знать, даже если выбор падет
+					на другую недвижимость, что бы как говориться не остаться с носом :) Это вам и бесплатный совет, смотреть на эти две строчки.
+					Эти пункты в обзятельном порядке должны быть отражены в документах! Если они иные - то будете выращивать
+					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?). 
+					Если говорить о видах использования: ИЖС и ЛПХ.
 					ИЖС - вполне конкретно
-					говорит о том, что этот земельный участок разрешается использовать для
+					говорит о том, что этот земельный участок разрешается использовать исключительно для
 					строительства дома.
-					ЛПХ - помимо разрешения на строительство
-					дома, дает больше возможностей для ведения деятельности 
-					(например выращивание скота). ЛПХ имеет более низкий налог чем ИЖС (пожалуй это тоже важный плюс, для тех
-					кто не любит переплачивать за "воздух"), особенно актуально в виду относительно нового закона о налогах на недвижимое имущество, 
-					где оплата налога напрямую зависит от кадастровой стоимости земли.
+					ЛПХ - помимо разрешения на строительство, дает ещё и возможность ведения деятельности 
+					(например выращивание скота). Так же такой участок имеет более низкий налог (пожалуй очень важный плюс, для тех
+					кто не любит платить за "воздух"), особенно актуально в виду относительно нового закона о налогах на недвижимое имущество.
 				</div>
 			</div>
 		</div>
