--- a/index.html
+++ b/index.html
@@ -268,26 +268,25 @@ $.ajax({
 					для отвода сточных вод, после
 					обильных дождей.
 					<br><br>
-					За одно поднимем важную тему - тип участка. Всем известно, что чаще всего под
-					строительство дома выбирают один из двух вариантов участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство).
+					Всем известно, что чаще всего под
+					строительство дома выбирают один из двух видом участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
 					<br><br>
-					Основные отличия ЛПХ от ИЖС:
+					Основные отличия ЛПХ/ИЖС:
 					<br>
 					Свидетельство на право собственности, содержит два крайне
-					важных момента: в нём отражен вид разрешенного использования
-					и категория земли. Если указанно необходимое сочетание, то Вы сможете безпроблем сразу заняться строительством собственного дома.
-					(В случае если категория земель в документах обозначена как "земли населенных пунктов", как у данного участка),  и соответсвенно
-					вид использования: ИЖС/ЛПХ. Это крайне важный момент! Который Вы должны знать, даже если выбор падет
-					на другую недвижимость, что бы как говориться не остаться с носом :) Это вам и бесплатный совет, смотреть на эти две строчки.
-					Эти пункты в обзятельном порядке должны быть отражены в документах! Если они иные - то будете выращивать
+					важных момента: в нём отражен 1. вид разрешенного использования
+					и 2. категория земли. Если указанно необходимое сочетание, то Вы сможете безпроблем сразу заняться обустройством собственного дома.
+					(В случае если категория земель: "земли населенных пунктов", так же как у данного участка).  Вид использования: ИЖС/ЛПХ. Это крайне важный момент!
+					Который Вы должны узнать, даже если выбор падет
+					на другую недвижимость, что бы как говориться не остаться с носом :) Это вам бесплатный совет - смотреть на эти две крайне важные строчки.
+					Эти вещи всегда четко отражены в документах! Если они будет отличаться от необходимых - то будете выращивать
 					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?). 
-					Если говорить о видах использования: ИЖС и ЛПХ.
 					ИЖС - вполне конкретно
 					говорит о том, что этот земельный участок разрешается использовать исключительно для
 					строительства дома.
 					ЛПХ - помимо разрешения на строительство, дает ещё и возможность ведения деятельности 
-					(например выращивание скота). Так же такой участок имеет более низкий налог (пожалуй очень важный плюс, для тех
-					кто не любит платить за "воздух"), особенно актуально в виду относительно нового закона о налогах на недвижимое имущество.
+					(например выращивание скота). Так же такой тип имеет более низкий налог (пожалуй очень важный плюс, для тех
+					кто не любит платить за "воздух"). Последнее особенно актуально в виду относительно нового закона о налогах на недвижимое имущество.
 				</div>
 			</div>
 		</div>
