--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ $.ajax({
 					</div>
 					<div class="col_4 last  border    shadow  ">
 						<div class="num4">21</div>
-						<div class="txt4">примерно столько дней занимает укоренение привычек человека. Отказаться от сладкого, начать пить не менее 2 литров воды в день, а так же этого времени достаточно что бы принять решение жить там, где лучше экология :)</div>
+						<div class="txt4">примерно столько дней занимает укоренение привычек человека. Отказаться от сладкого, начать пить не менее 2 литров воды в день, а так же этого времени достаточно что бы принять решение жить там, где лучше экология.</div>
 						<div class="clear"></div>
 					</div>
 					<div class="clear"></div>
