--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $.ajax({
 					обильных дождей.
 					<br><br>
 					Всем известно, что чаще всего под
-					строительство дома выбирают один из двух видом участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
+					строительство дома выбирают один из двух видов участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
 					<br><br>
 					Основные отличия ЛПХ/ИЖС:
 					<br>
