--- a/index.html
+++ b/index.html
@@ -275,18 +275,22 @@ $.ajax({
 					<br>
 					Свидетельство на право собственности, содержит два крайне
 					важных момента: в нём отражен 1. вид разрешенного использования
-					и 2. категория земли. Если указанно необходимое сочетание, то Вы сможете безпроблем сразу заняться обустройством собственного дома.
-					(В случае если категория земель: "земли населенных пунктов", так же как у данного участка).  Вид использования: ИЖС/ЛПХ. Это крайне важный момент!
-					Который Вы должны узнать, даже если выбор падет
+					и 2. категория земли (ЛПХ/ИЖС). Если указанно правильное сочетание (ЛПХ+"земли населенных пунктов"), то Вы сможете безпроблем сразу заняться обустройством собственного дома.
+					(Для данного участка: "земли населенных пунктов", ЛПХ).  <br>
+					Вид использования: ИЖС/ЛПХ. Это крайне важный момент!
+					Который Вы должны знать, даже если выбор падет
 					на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на данные строчки.
-					Информация всегда четко отражена в документах! Если строки будут отличаться от необходимых - будете выращивать
-					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?). 
+					Информация всегда четко отражена в документах! Если строки будут отличаться от необходимых (например ЛПХ, но "Земли сельского хозяйства"),  
+					- будете выращивать
+					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?).
+					<br>
 					ИЖС - вполне конкретно
 					говорит о том, что этот земельный участок разрешается использовать исключительно для
 					строительства дома.
+					<br>
 					ЛПХ - помимо разрешения на строительство, дает ещё и возможность ведения деятельности 
-					(например выращивание скота). Так же такой тип имеет более низкий налог (пожалуй очень важный плюс, для тех
-					кто не любит платить за "воздух"). Последнее особенно актуально в виду относительно нового закона о налогах на недвижимое имущество.
+					(например выращивание скота). Так тип имеет более низкий налог (пожалуй очень важный плюс, для тех
+					кто не любит платить за "воздух"). Последнее особенно актуально в виду изменившегося закона о налогах на недвижимое имущество.
 				</div>
 			</div>
 		</div>
