--- a/index.html
+++ b/index.html
@@ -275,21 +275,24 @@ $.ajax({
 					<br>
 					Свидетельство на право собственности, содержит два крайне
 					важных момента: в нём отражен 1. вид разрешенного использования
-					и 2. категория земли (ЛПХ/ИЖС). Если указанно правильное сочетание (ЛПХ+"земли населенных пунктов"), то Вы сможете безпроблем сразу заняться обустройством собственного дома.
-					(Для данного участка: "земли населенных пунктов", ЛПХ).  <br>
+					и 2. категория земли (ЛПХ/ИЖС).
+		
+					<br>
 					Вид использования: ИЖС/ЛПХ. Это крайне важный момент!
 					Который Вы должны знать, даже если выбор падет
-					на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на данные строчки.
+					на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на две данные строчки.
 					Информация всегда четко отражена в документах! Если строки будут отличаться от необходимых (например ЛПХ, но "Земли сельского хозяйства"),  
-					- будете выращивать
+					- сможете выращивать
 					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?).
+					<br><br>
+					Если указанно правильное сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует данным по этому участку), то Вы сможете безпроблем сразу заняться обустройством собственного дома.
 					<br>
 					ИЖС - вполне конкретно
 					говорит о том, что этот земельный участок разрешается использовать исключительно для
 					строительства дома.
 					<br>
-					ЛПХ - помимо разрешения на строительство, дает ещё и возможность ведения деятельности 
-					(например выращивание скота). Так тип имеет более низкий налог (пожалуй очень важный плюс, для тех
+					ЛПХ - помимо разрешения на строительство, дает возможность ведения сельско-хозяйственной деятельности 
+					(например выращивание скота). Имеет более низкий налог (пожалуй очень важный плюс, для тех
 					кто не любит платить за "воздух"). Последнее особенно актуально в виду изменившегося закона о налогах на недвижимое имущество.
 				</div>
 			</div>
