--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@ $.ajax({
 					- сможете выращивать
 					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?).
 					<br><br>
-					Если указанно правильное сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует данным по этому участку), то Вы сможете безпроблем сразу заняться обустройством собственного дома.
+					Если указанно правильное сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует данным по этому участку) либо ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу заняться обустройством собственного дома.
 					<br>
 					ИЖС - вполне конкретно
 					говорит о том, что этот земельный участок разрешается использовать исключительно для
