--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ $.ajax({
 			<div class="logo_img"><img width="100%;" src="img/200x0/default_logo.png" alt=""></div>
 			
 			
-			<div class="text1">Прекрасное место для того что бы жить</div>
+			<div class="text1">Прекрасное место для того что бы жить!</div>
 			<div class="phone-and-address"><div class="phone1">8 (921) 447-07-79</div>
 			<div class="address1">г.СПБ, Лен. обл., Тосненский р-н, <br>д.Тарасово, ул.12-ая линия, д.114 </div></div>
 			<div class="clear"></div>
