--- a/index.html
+++ b/index.html
@@ -279,14 +279,15 @@ $.ajax({
 					и 2. категория земли (ЛПХ/ИЖС).
 		
 					<br>
-					Вид использования: ИЖС/ЛПХ. Это крайне важный момент!
+					Вид использования: Это крайне важный момент!
 					Который Вы должны знать, даже если выбор падет
-					на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на две данные строчки.
-					Информация всегда четко отражена в документах! Если строки будут отличаться от необходимых (например ЛПХ, но "Земли сельского хозяйства"),  
+					на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на две данные строки.
+					Информация всегда будет отражена в документах! Если строки будут отличаться от необходимых (например ЛПХ, но вид разрешенного использования "Земли сельского хозяйства"),  
 					- сможете выращивать
-					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?).
+					на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно вам надо?). 
+					Такие участки к слову, стоят как правило сущие копейки. Что оправдывается видом их использования. 
 					<br><br>
-					Если указанно правильное сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует данным по этому участку) либо ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу заняться обустройством собственного дома.
+					Если указанно необходимое нам сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует данным по этому участку) либо ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу заняться обустройством собственного дома.
 					<br>
 					ИЖС - вполне конкретно
 					говорит о том, что этот земельный участок разрешается использовать исключительно для
