--- a/index.html
+++ b/index.html
@@ -247,7 +247,9 @@ $.ajax({
 			<div class="section_inner">
 				<div class="title  ">Что необходимо знать об этом месте</div>
 				<div class="sub_title  hidden   ">____</div>
-				<div class="text">Деревня Тарасово, ул. 12-ая линия, д. 114. Кадастровый номер: 47:26:0720002:132. <br><br>
+				<div class="text">Деревня Тарасово, ул. 12-ая линия, д. 114.
+					<br>
+					Кадастровый номер: 47:26:0720002:132. <br><br>
 					<img class="rightimg" height="600px" src="img/213.png" alt=""> Участок располагается от столбика с
 					лентой и заканчивается примерно
 					примерно через 30 метров за домом на фотографии. Позади
@@ -262,12 +264,18 @@ $.ajax({
 		
 					<br><br>
 					Строение под
-					инвентарь (то что на первом фото) уже убрано.
+					инвентарь (что на фото справа) уже убрано.
 					<br><br>
 					Поверхность участка имеет небольшой
 					уклон, что является преимуществом
 					для отвода сточных вод, после
-					обильных дождей.
+					обильных дождей. 
+					<br><br>
+					В 2020 появилась возможность быстро добираться до города, по платной трассе М11.
+					<br><br>
+					Участок имеет удобное расположение: сможете почувствовать чистый свежий воздух и отсутствие городской суеты.
+					<br><br>
+					Участок так же сдается в долгосрочную аренду (от 6 месяцев).
 					<br><br>
 					Всем известно, что чаще всего под
 					строительство дома выбирают один из двух видов участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
