--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ $.ajax({
 					<br><br>
 					Участок имеет удобное расположение: сможете почувствовать чистый свежий воздух и отсутствие городской суеты.
 					<br><br>
-					Участок так же сдается в долгосрочную аренду (от 6 месяцев).
+					Участок так же сдается в аренду (от 3 месяцев). Готовы рассмотреть вариант аренды с последующим выкупом.
 					<br><br>
 					Всем известно, что чаще всего под
 					строительство дома выбирают один из двух видов участков: ЛПХ и ИЖС (личное подсобное хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
