add ignore file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru-ru">
 <head>
+	ssdafsdfsadf
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	
 	
