Edit general text index.html

--- a/index.html
+++ b/index.html
@@ -147,41 +147,39 @@
                 Участок имеет удобное расположение: сможете почувствовать чистый свежий воздух и отсутствие городской
                 суеты.
                 <br><br>
-                Участок так же сдается в аренду (от 3 месяцев). Готовы рассмотреть вариант аренды с последующим выкупом.
+                Участок так же можно взять в аренду (от 3 месяцев). При необходимости возможен вариант аренды с
+                последующим выкупом.
                 <br><br>
-                Всем известно, что чаще всего под
+                Известно, что чаще всего под
                 строительство дома выбирают один из двух видов участков: ЛПХ и ИЖС (личное подсобное
                 хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
                 <br><br>
-                Основные отличия ЛПХ/ИЖС:
+                Отличия ЛПХ/ИЖС:
                 <br>
-                Свидетельство на право собственности, содержит два крайне
-                важных момента: в нём отражен 1. вид разрешенного использования
-                и 2. категория земли (ЛПХ/ИЖС).
-
+                В свидетельстве на право собственности, есть два крайне
+                важных момента: 1. вид разрешенного использования
+                2. категория земли (ЛПХ/ИЖС).
                 <br>
-                Вид использования: Это крайне важный момент!
-                Который Вы должны знать, даже если выбор падет
-                на другую недвижимость, что бы как говориться не остаться с "носом". Бесплатный совет - смотреть на две
-                данные строки.
-                Информация всегда будет отражена в документах! Если строки будут отличаться от необходимых (например
-                ЛПХ, но вид разрешенного использования "Земли сельского хозяйства"),
-                - сможете выращивать
-                на участке картошку, а в случае попытки строительства, лишь получать предписания о демонтаже дома (оно
-                вам надо?).
-                Такие участки к слову, стоят как правило сущие копейки. Что оправдывается видом их использования.
+                Это важно знать даже если выбор пдет на другую недвижимость, что бы не остаться с "носом". Необходимо
+                смотреть на две данные строки, которая всегда отражена в документах! В случае если в свидетелстве будет
+                указано например ЛПХ, и при этом вторым пунктом "вид разрешенного использования", будет соответствовать
+                "Землям сельского хозяйства", то в это случае на таком участке будет можно лишь "выращивать
+                картошку", или разводить кур, но ни как не заниматься строительвтом дома. Сейчас в 2022 году на это особенно
+                смотрят местные власти, и в случае нарушений будут выписывать бесконечные штрафы, и что еще хуже
+                получать предписания о демонтаже дома.
+                Такие участки к слову, стоят разумеется в разы дешевле целевых.
                 <br><br>
-                Если указанно необходимое нам сочетание двух пунктов: ЛПХ + "земли населенных пунктов" (соответствует
-                данным по этому участку) либо ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу заняться
-                обустройством собственного дома.
+                Если же указанно сочетание двух других пунктов: <b>ЛПХ + "земли населенных пунктов"</b> что соответствует
+                данным по этому участку. либо просто ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу после
+                приобретения строительтвом собственного дома.
                 <br>
                 ИЖС - вполне конкретно
                 говорит о том, что этот земельный участок разрешается использовать исключительно для
                 строительства дома.
                 <br>
                 ЛПХ - помимо разрешения на строительство, дает возможность ведения сельско-хозяйственной деятельности
-                (например выращивание скота). Имеет более низкий налог (пожалуй очень важный плюс, для тех
-                кто не любит платить за "воздух"). Последнее особенно актуально в виду изменившегося закона о налогах на
+                (например выращивание скота). Имеет более низкий налог (пожалуй важный плюс, для тех
+                кто не любит платить больше). Последнее особенно актуально в виду изменившегося закона о налогах на
                 недвижимое имущество.
             </div>
         </div>
@@ -235,7 +233,7 @@
             <div class="title  ">КОМПЛЕКСНО!</div>
             <div class="sub_title  ">ПОЛУЧЯЕМ К УЧАСТКУ<br>
                 Внимание! Оставьте заявку на сайте прямо сейчас и получите 5% скидку! Либо по телефону указанному на
-                сайте <br>(Скидка действует в период: с 01.04.20 по 01.11.20)
+                сайте <br>(Скидка действует в период: с 20.01.22 по 20.05.22)
             </div>
 
             <div class="arr1">
