*Correction of errors in the gereral text. *Edit style text index.html

--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
         <div class="section_inner">
             <div class="title  ">Что необходимо знать об этом месте</div>
             <div class="sub_title  hidden   ">____</div>
-            <div class="text">Деревня Тарасово, ул. 12-ая линия, д. 114.
+            <div class="text"><b>Деревня Тарасово, ул. 12-ая линия, д. 114.</b>
                 <br>
-                Кадастровый номер: 47:26:0720002:132. <br><br>
+                <b>Кадастровый номер: 47:26:0720002:132.</b> <br><br>
                 <img class="rightimg" height="600px" src="img/213.png" alt=""> Участок располагается от столбика с
                 лентой и заканчивается примерно
                 примерно через 30 метров за домом на фотографии. Позади
@@ -154,30 +154,31 @@
                 строительство дома выбирают один из двух видов участков: ЛПХ и ИЖС (личное подсобное
                 хозяйство/индивидуальное жилищное строительство). Данный участок имеет тип: ЛПХ.
                 <br><br>
-                Отличия ЛПХ/ИЖС:
+                <b>Отличия ЛПХ/ИЖС:</b>
                 <br>
                 В свидетельстве на право собственности, есть два крайне
                 важных момента: 1. вид разрешенного использования
                 2. категория земли (ЛПХ/ИЖС).
                 <br>
-                Это важно знать даже если выбор пдет на другую недвижимость, что бы не остаться с "носом". Необходимо
-                смотреть на две данные строки, которая всегда отражена в документах! В случае если в свидетелстве будет
-                указано например ЛПХ, и при этом вторым пунктом "вид разрешенного использования", будет соответствовать
+                Это важно знать даже если выбор пдет на другую недвижимость, что бы в пустую не потерять денег. Необходимо всегда
+                смотреть на эти две строки, которые всегда отражены в документе! В случае если в свидетелстве будет
+                указано например ЛПХ, и при этом вторым пунктом "вид разрешенного использования", будет
                 "Землям сельского хозяйства", то в это случае на таком участке будет можно лишь "выращивать
-                картошку", или разводить кур, но ни как не заниматься строительвтом дома. Сейчас в 2022 году на это особенно
-                смотрят местные власти, и в случае нарушений будут выписывать бесконечные штрафы, и что еще хуже
-                получать предписания о демонтаже дома.
-                Такие участки к слову, стоят разумеется в разы дешевле целевых.
+                картошку", или разводить кур, но ни как не заниматься строительвтом дома.
+                <br>К концу 2021 года за это особенно
+                взялись местные власти, и в случае нарушений выписываются штрафы, и что еще хуже
+                люди получать предписания о демонтаже дома.
+                По этому такие участки, стоят в разы дешевле целевых.
                 <br><br>
-                Если же указанно сочетание двух других пунктов: <b>ЛПХ + "земли населенных пунктов"</b> что соответствует
-                данным по этому участку. либо просто ИЖС + "земли населенных пунктов", то Вы сможете безпроблем сразу после
-                приобретения строительтвом собственного дома.
-                <br>
-                ИЖС - вполне конкретно
+                Если же указанно сочетание пунктов: <b>ЛПХ + "земли населенных пунктов"</b> (что соответствует
+                текущему участку), либо ИЖС + "земли населенных пунктов", то Вы сможете без проблем после
+                приобретения заняться строительтвом собственного дома.
+                <br><br>
+                <b>ИЖС</b> - вполне конкретно
                 говорит о том, что этот земельный участок разрешается использовать исключительно для
                 строительства дома.
                 <br>
-                ЛПХ - помимо разрешения на строительство, дает возможность ведения сельско-хозяйственной деятельности
+                <b>ЛПХ</b> - помимо разрешения на строительство, дает возможность ведения сельско-хозяйственной деятельности
                 (например выращивание скота). Имеет более низкий налог (пожалуй важный плюс, для тех
                 кто не любит платить больше). Последнее особенно актуально в виду изменившегося закона о налогах на
                 недвижимое имущество.
